<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linear3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:orientation="vertical"
    android:background="@color/black">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:id="@+id/textview2"
        android:layout_gravity="center_horizontal"
        />

    <TextView
        android:id="@+id/textview3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:text="@string/registered_email_address"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textinputlayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edittext3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:textStyle="bold"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:gravity="center_horizontal"
            android:textColorHint="@color/black"
            android:textSize="20sp"
            android:autofillHints="@string/email_address"/></com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_rounded"
        android:text="@string/send_reset_email"
        android:textSize="20sp"
        android:id="@+id/button3"
        android:textAllCaps="false"
        android:layout_marginTop="30dp"
        android:textColor="@color/white"
        android:layout_gravity="center_horizontal"
        android:visibility="visible"
        />

    <TextView
        android:id="@+id/textview4"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/back"
        android:textSize="30sp"
        android:textColor="#E30505"
        android:layout_marginTop="100dp"
        android:clickable="true"
        android:focusable="true"
        />

</LinearLayout>