<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linear1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:orientation="vertical"
    android:background="#000000">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/ic_baseline_login_24"
        android:padding="60dp"
        android:contentDescription="@string/login_image"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textinputlayout1">
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edittext1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="10sp"
        android:autofillHints="@string/email_address"
        android:gravity="center_vertical"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/white"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="visible"
        />
    </com.google.android.material.textfield.TextInputLayout>
<com.google.android.material.textfield.TextInputLayout
    android:id="@+id/textinputlayout2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="true"
    android:focusableInTouchMode="true"
    app:passwordToggleEnabled="true">
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edittext2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="20sp"
        android:gravity="center_vertical"
        android:autofillHints="@string/password"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="visible" /></com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:text="@string/login"
        android:background="@drawable/button_rounded"
        android:textSize="20sp"
        android:textAllCaps="true"
        android:clickable="true"
        android:focusable="true"
        android:onClick="onClick"
        />

    <TextView
        android:id="@+id/textview1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:text="@string/forgot_password"
        android:layout_gravity="center_horizontal"
        android:textSize="25sp"
        android:textColor="#BD0303"
        android:textStyle="bold"
        android:clickable="true"
        android:focusable="true"
        />
</LinearLayout>